Fix spacing

--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -36,7 +36,7 @@
 		border-top: 1px solid $color_background;
 		font-size: $font_size_b;
 		font-weight: $font_weight_mediumbold;
-		padding: $spacing_xs $spacing_m;
+		padding: $spacing_s $spacing_m;
 		transition: $transition_duration;
 		&:hover {
 			background-color: $color_background;
